--- a/Footer.html
+++ b/Footer.html
@@ -14,18 +14,18 @@
             </li>
             <li
                 class="bg-rose-300 mr-2 rounded-full border-2 border-rose-400 p-2 hover:border-rose-300 hover:bg-rose-300">
-                <a href="#" class="p-1 bx-flashing-hover"><i class='bx bxl-facebook center'
+                <a href="#" class="p-1 bx-flashing-hover" target="_blank"><i class='bx bxl-facebook center'
                         style='color:#9f1239'></i></a>
             </li>
             <li
                 class="bg-rose-300 mr-2 rounded-full border-2 border-rose-400 p-2 hover:border-rose-300 hover:bg-rose-300">
-                <a href="https://twitter.com/" class="p-1 bx-flashing-hover"><i class='bx bxl-twitter'
+                <a href="https://twitter.com/" class="p-1 bx-flashing-hover" target="_blank"><i class='bx bxl-twitter'
                         style='color:#9f1239'></i></a>
             </li>
             <li
                 class="bg-rose-300 mr-2 rounded-full border-2 border-rose-400 p-2 hover:border-rose-300 hover:bg-rose-300">
-                <a href="https://www.instagram.com/?hl=fr" class="p-1 bx-flashing-hover"><i class='bx bxl-instagram'
-                        style='color:#9f1239'></i></a>
+                <a href="https://www.instagram.com/?hl=fr" class="p-1 bx-flashing-hover" target="_blank"><i
+                        class='bx bxl-instagram' style='color:#9f1239'></i></a>
             </li>
         </ul>
     </div>
