--- a/Page_Navbar.html
+++ b/Page_Navbar.html
@@ -15,6 +15,7 @@
     <!-- Sidebar -->
     <div class="bg-rose-100 text-rose-800">
 
+
         <!-- Modifier w- pour la taille -->
         <div class="fixed flex flex-col top-0 right-0 w-64 bg-rose-300 h-full border-l">
             <div class="flex items-center justify-center h-20 border-b text-2xl">
@@ -31,7 +32,7 @@
                     </li>
 
                     <li>
-                        <a href="Index.html"
+                        <a href="Index.php"
                             class="relative flex flex-row items-center h-11 focus:outline-none hover:bg-rose-50 text-rose-700 hover:text-rose-500 border-l-4 border-transparent hover:border-blue-300 pl-6">
                             <span class="inline-flex justify-center items-center ml-4">
                                 <i class='bx bx-home-alt'></i>
@@ -41,7 +42,7 @@
                     </li>
 
                     <li>
-                        <a href="#"
+                        <a href="Equipe.php"
                             class="relative flex flex-row items-center h-11 focus:outline-none hover:bg-rose-50 text-rose-700 hover:text-rose-500 border-l-4 border-transparent hover:border-purple-300 pl-6">
                             <span class="inline-flex justify-center items-center ml-4">
                                 <i class='bx bx-football'></i>
@@ -95,13 +96,18 @@
                             <span class="ml-2 text-sm tracking-wide truncate">Déconnexion</span>
                         </a>
                     </li>
+                    <li>
+                        <div class="flex items-center justify-center h-20  border-t border-b text-2xl" id="fermer">
+                            <button><i class='bx bx-x pr-2 text-lg'></i>Fermer</button>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
     </div>
 
 
-    <script src="tailwind.config.js"></script>
+    <script src="script.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 
